--- a/.env
+++ b/.env
@@ -1,6 +1,12 @@
-NEXT_PUBLIC_API_KEY="AIzaSyAsbknicTKDbqWW5oGiaBvnUlmiQfVGVRk"
-NEXT_PUBLIC_AUTH_DOMAIN="baticinturon.firebaseapp.com"
-NEXT_PUBLIC_PROJECT_ID="baticinturon"
-NEXT_PUBLIC_STORAGE_BUCKET="baticinturon.appspot.com"
-NEXT_PUBLIC_MESSAGING_SENDER_ID="106309005417"
-NEXT_PUBLIC_APP_ID="1:106309005417:web:b1c16c76dfb79d72bc72f8"
+# NEXT_PUBLIC_API_KEY="AIzaSyAsbknicTKDbqWW5oGiaBvnUlmiQfVGVRk"
+# NEXT_PUBLIC_AUTH_DOMAIN="baticinturon.firebaseapp.com"
+# NEXT_PUBLIC_PROJECT_ID="baticinturon"
+# NEXT_PUBLIC_STORAGE_BUCKET="baticinturon.appspot.com"
+# NEXT_PUBLIC_MESSAGING_SENDER_ID="106309005417"
+# NEXT_PUBLIC_APP_ID="1:106309005417:web:b1c16c76dfb79d72bc72f8"
+NEXT_PUBLIC_API_KEY="AIzaSyCZ2fercIn-o2xwUW9G8DtdaFW7IAyccSI"
+NEXT_PUBLIC_AUTH_DOMAIN="buensai.firebaseapp.com"
+NEXT_PUBLIC_PROJECT_ID="buensai"
+NEXT_PUBLIC_STORAGE_BUCKET="buensai.appspot.com"
+NEXT_PUBLIC_MESSAGING_SENDER_ID="907339111416"
+NEXT_PUBLIC_APP_ID="1:907339111416:web:c10d9436fa7885a865140d"
