--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-NEXT_PUBLIC_API_KEY="AIzaSyBaJytkybllL3GxVWxb4edX-zbW7rGkq8M"
-NEXT_PUBLIC_AUTH_DOMAIN="pruebacamu-30709.firebaseapp.com"
-NEXT_PUBLIC_PROJECT_ID="pruebacamu-30709"
-NEXT_PUBLIC_STORAGE_BUCKET="pruebacamu-30709.appspot.com"
-NEXT_PUBLIC_MESSAGING_SENDER_ID="1044846073078"
-NEXT_PUBLIC_APP_ID="1:1044846073078:web:6390994fa3f211e8cd48d7"
+NEXT_PUBLIC_API_KEY="AIzaSyCZ2fercIn-o2xwUW9G8DtdaFW7IAyccSI"
+NEXT_PUBLIC_AUTH_DOMAIN="buensai.firebaseapp.com"
+NEXT_PUBLIC_PROJECT_ID="buensai"
+NEXT_PUBLIC_STORAGE_BUCKET="buensai.appspot.com"
+NEXT_PUBLIC_MESSAGING_SENDER_ID="907339111416"
+NEXT_PUBLIC_APP_ID="1:907339111416:web:c10d9436fa7885a865140d"
