--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "prettier": "^2.7.1",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-toastify": "^9.0.8"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
