--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
+    "react-responsive-modal": "^6.2.0",
     "react-toastify": "^9.0.8"
   },
   "devDependencies": {
