--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -26,7 +27,8 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
     "react-responsive-modal": "^6.2.0",
-    "react-toastify": "^9.0.8"
+    "react-toastify": "^9.0.8",
+    "typescript": "^4.9.5"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
