--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,11 @@
 {
-  "extends": ["next/core-web-vitals", "prettier"],
+  "extends": ["next", "prettier"],
   "plugins": ["prettier"],
   "rules": {
-    "prettier/prettier": "warn",
-    "react/no-unescaped-entities": "off"
+    "prettier/prettier": ["error",{
+      "endOfLine": "auto"}
+    ],
+    "react/no-unescaped-entities": "off",
+    "@next/next/no-page-custom-font": "off"
   }
 }
