--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.6",
     "bootstrap": "^5.2.2",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint": "^8.35.0",
+    "eslint-config-next": "^13.2.1",
+    "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
     "firebase": "^9.17.1",
-    "lint-staged": "^13.0.3",
     "next": "12.3.0",
     "pre-commit": "^1.2.2",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "18.2.0",
@@ -30,10 +31,7 @@
     "react-toastify": "^9.0.8",
     "typescript": "^4.9.5"
   },
-  "devDependencies": {
-    "eslint": "^8.23.0",
-    "eslint-config-next": "^12.3.0"
-  },
+  "devDependencies": {},
   "lint-staged": {
     "src/*/.{js,jsx,ts,tsx,json,css,scss,md}": [
       "eslint src --fix"
